--- a/public/login.html
+++ b/public/login.html
@@ -15,14 +15,20 @@
       <form action="" method="post">
         <h1>Login</h1>
         <div class="input-box">
-          <input type="text" name="" id="" placeholder="username" required />
+          <input
+            type="text"
+            name=""
+            id="username"
+            placeholder="username"
+            required
+          />
           <i class="bx bxs-user"></i>
         </div>
         <div class="input-box">
           <input
             type="password"
             name=""
-            id=""
+            id="password"
             placeholder="password"
             required
           />
@@ -38,5 +44,7 @@
         </div>
       </form>
     </div>
+
+    <script src="./script.js"></script>
   </body>
 </html>
